@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: split.test,v 1.2 2001/01/28 21:55:16 mdejong Exp $
+# RCS: @(#) $Id: split.test,v 1.3 2003/03/17 21:33:42 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -60,6 +60,19 @@ test split-1.9 {basic split commands} {knownbug} {
 test split-1.10 {basic split commands} {
     split "a0ab1b2bbb3\000c4" ab\000c
 } {{} 0 {} 1 2 {} {} 3 {} 4}
+
+test split-1.11 {basic split commands} {
+    split "a\nb\nc\n" "\n"
+} {a b c {}}
+
+test split-1.12 {basic split commands} {
+    split "a\nb\nc\n"
+} {a b c {}}
+
+test split-1.13 {basic split commands} {
+    split "a\nb\ncc\n\n\nd" "\n"
+} {a b cc {} {} d}
+
 
 test split-2.1 {split errors} {
     list [catch split msg] $msg $errorCode
